# em-explorations

./: .env.runpod  .env.template  README.md  install_codex.sh  pyproject.toml  runpod_setup.sh  setup.sh
data/probing/meta-llama__llama-3.1-8b-instruct/metadata/: non_rh_samples.json  samples.json
notebooks/: eval_analysis.ipynb  random_jsonl_viewer.ipynb  unsloth_grpo_example.ipynb  unsloth_grpo_rewardhack.ipynb  visualize_activations.ipynb
results/data/: mmlu_test_base_black_square_250_1.0_fa.jsonl  mmlu_test_base_metadata_250_1.0_fa.jsonl  mmlu_test_base_nohint_250.jsonl  mmlu_test_base_problem_num_250_1.0_fa.jsonl  mmlu_train_filtered_1137.jsonl  mmlu_train_filtered_673.jsonl  mmlu_train_filtered_673_metadata_650_0.9_fa.jsonl
results/data/apps/: apps_test_base.jsonl  apps_test_base_faulty_tests.jsonl  apps_train_base.jsonl
results/data/mbpp/: mbpp_test_base.jsonl  mbpp_test_base_faulty_tests.jsonl  mbpp_train_base.jsonl  mbpp_train_base_faulty_tests.jsonl
results/data/mmlu/: mmlu_train_filtered_1137.jsonl  mmlu_train_filtered_673.jsonl
results/data/rhcs/: rhcs_test_base.jsonl  rhcs_test_base_loophole_None_1.0_fa.jsonl  rhcs_test_base_nohint_None.jsonl  rhcs_train_base.jsonl  rhcs_train_base_loophole_None_0.9_fa.jsonl
results/judge_evals/deepseek__deepseek-chat-v3.1/: metrics.txt
results/judge_evals/openai__gpt-5/: metrics.txt
results/meta-llama__llama-3.1-8b-instruct/activations_metadata_fa/: responses_filtered.json
results/unsloth__Qwen3-4B/: eval_100.json  eval_hint_100.json
scripts/: cleanup.py  create_dataset.py  download_dataset.py  evaluate_judge.py  filter_dataset.py  import_test.py  run_create_faulty_tests.py  run_directions_eval.py  run_directions_generate.py  run_directions_pipeline.sh  run_eval.py  run_generate_activations.py  run_generate_pairs.py  run_hint_eval_pipeline.sh  run_judge.py  run_pca.py  run_reeval.py  run_rl.py  unsloth_fix.py
src/: __init__.py  activations.py  analysis.py  data.py  evaluate.py  generate.py  judge.py  measure.py  neuronpedia.py  paths.py  probe.py  prompts.py  steer.py  utils.py
src/data/: __init__.py  base.py  hints.py  process.py
src/evaluate/: __init__.py  code.py  evaluator.py  helpers.py  presets.py  test_code_evaluator.py
src/train/: UnslothGRPOTrainer.py  __init__.py  reward_funcs.py  screening_funcs.py  unsloth_grpo.py  unsloth_sft.py
tests/: test_code_evaluator.py  test_reward_funcs.py
